finish up page layout.

--- a/full/index.html
+++ b/full/index.html
@@ -2,19 +2,71 @@
 <html>
   <head>
     <title>Wild Wild Web</title>
+    <link href="data:," rel="icon">
+    <style>
+      img {
+        aspect-ratio: 1;
+        border: 1px solid #000;
+      }
+      table {
+        table-layout: fixed;
+        margin: auto;
+      }
+      .up, .low {
+        img {
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+      .up {
+        img {
+          width: 5em;
+        }
+        td {
+          width: 6em;
+        }
+      }
+      .low {
+        img {
+          width: 9em;
+        }
+        td {
+          width: 11em;
+        }
+      }
+    </style>
   </head>
-  <body>
-    <ul>
-      <li>How this website started</li>
-      <li>How to catch a spider</li>
-      <li>How to catch food for your spider</li>
-      <li>How to maintain your enclosure</li>
-      <li>General info for each species</li>
-      <li>Our spiders</li>
-      <li>Spider Drama series</li>
-      <li>Contributions to science</li>
-      <li>Enclosure fabrication resources</li>
-      <li>Fundraising</li>
-    </ul>
+  <body style="text-align:center;min-width:53em;">
+    <table class="up">
+      <tr>
+        <td><img src="" alt=""></td>
+        <td><img src="" alt=""></td>
+        <td style="width: 28em"></td>
+        <td><img src="" alt=""></td>
+        <td><img src="" alt=""></td>
+      </tr>
+    </table>
+    <h4 style="position:relative;top:2.25em;word-spacing:8em;">WILD WILD WEB</h4>
+    <table class="low">
+      <tr>
+        <td><img src="" alt=""></td>
+        <td><img src="" alt=""></td>
+        <td><img src="" alt=""></td>
+        <td><img src="" alt=""></td>
+      </tr>
+    </table>
+    <h4 style="position:relative;top:-2em;">A CATALOGUE OF<br>WILD SPIDERS IN<br>SINGAPORE</h4>
+    <table style="text-align: left">
+      <tr><td>How this website started</td></tr>
+      <tr><td>How to catch a spider</td></tr>
+      <tr><td>How to catch food for your spider</td></tr>
+      <tr><td>How to maintain your enclosure</td></tr>
+      <tr><td>General info for each species</td></tr>
+      <tr><td>Our spiders</td></tr>
+      <tr><td>Spider drama series</td></tr>
+      <tr><td>Contributions to science</td></tr>
+      <tr><td>Enclosure fabrication resources</td></tr>
+      <tr><td>Fundraising</td></tr>
+    </table>
   </body>
 </html>
